<resources>
    <string name="app_name">Amtalek</string>
    <string name="map_api_key" translatable="false">AIzaSyAsJmPNAuOje9uNhxDDso5vR2nhLwWDJo8</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="name">Name:</string>
    <string name="l_rem_ipsum_beh_resk_stafettl_kare_exod_ling_l_ngar_prel_anabelt_och_intrassa_b_lig_er_dek_antiskop_och_semipyse_oling_plan_nera_p_asar_megaden_unesk">Terms and Conditions
1. AMTALEK TERMS



1.1       In these terms and conditions for users the terms “we", "our", "us" means Amtalek and its subsidiaries, employees, officers, agents, or assigned parties.

1.2       "Website" refers to amtalek.com

1.3       By accessing and using this Website, you are agreeing to be bound by the Website’s Terms of Use and the Privacy Policy, all applicable Egypt and Middle East laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these Terms, your ONLY SOLE option is to immediately cease your use of this Website.

1.4       You may not use the Website and may not accept these Terms if (a) you are not of eighteen (14) years of age on social media platform, and is you are not (18) years of age on property management platform, or (b) you are a person who is either barred or otherwise legally prohibited from receiving or using the Website under the laws of the country in which you are a resident or from which you access or use the Website.

1.5       By accepting these Terms, These terms are effective between you and us as of the date you accept these Terms, and you do so by default through the use of the Website.



2. USE LICENSE and RESTRICTIONS



2.1       By accepting these terms on Amtalek.com, You (user) gives us permission is granted to temporarily download copies of the materials (information or software) on the Website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:

modify or copy the materials.
use the materials for any commercial purpose, or for any public display (commercial or non-commercial).
remove any copyright or other proprietary notations from the materials you upload.
transfer the materials to another person or "mirror" the materials on any other server.
2.2       In accessing or using Amtalek platform you irrevocably agree and undertake to ensure that you will not:

use any automated device, software process or means to access, retrieve, scrape, or index our website or any content on our website.
use any device, software, process or means to interfere or attempt to interfere with the proper working on our platform Amtalek.com
undertake any action that will impose a burden or make excessive traffic demands on our infrastructure that we deem, in our sole discretion to be unreasonable or disproportionate Website usage.
use or index any content or data on our website for purposes of:
constructing or populating a searchable database of properties.
building a fake or real database of property information.
competing with us in any manner that we have not specifically authorized.
transmit spam, chain letters, contents, junk email, surveys, or other mass messaging, whether commercial in nature or not.
use our platform or any content from our website in any manner which we in our sole discretion determine as not reasonable and/or not for the purpose which it is made available.
violate the rights of any person, including copyright, trade secret, privacy right, or any other intellectual property or proprietary right;
act in violation of any such terms or other condition posed by us or any applicable law.
reproduce, republish, retransmit, modify, adapt, distribute, translate, create derivative works or adaptation of, publicly display, sell, trade, or in any way exploit our website or any content on our website, except as expressly authorized by us; or
transmit or attempt to transmit any computer viruses, worms, defects or other items of a destructive manner.
2.3       We reserve the right to exercise whatever means we deem necessary to prevent unauthorized access to our use of the Website, including but not limited to, instituting technological barriers, or reporting your conduct to any person or entity.

2.4       This license shall automatically terminate if you violate any of these restrictions and may be terminated by us at any time.



3. YOUR RESPONSIBILITIES



3.1       We are not a Broker/Development estate agency and we provide a service whereby agents may market and you may view property details (“Details”) together with other content hosted by us. Agents and third parties are responsible for preparing the Details and fielding enquiries directly from you. We do not get involved in any communications between you and agents and we do not participate in any part of the transaction.

3.2       Details are hosted by us in good faith but are produced directly by agents and/or third parties and have not been verified by us. You are responsible for making your own enquiries and we provide no guarantee and accept no responsibility for the accuracy or completeness of any information contained within the Details.

3.3       You are responsible for checking, confirming and satisfying yourself as to the accuracy of any Details.

3.4       You are responsible for ensuring that you act in good faith towards any other parties.



4. LIMITATIONS



4.1       In no event will we be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on the Website, even if one of our authorized representatives has been notified orally or in writing of the possibility of such damage.

4.2       We will not be liable for any loss or damage arising under or in connection with:

any failures due to software or internet errors or unavailability, or any other circumstances beyond our reasonable control.
any loss of your password or account if caused by a breakdown, error, loss of power or otherwise cause by or to your computer system and/or your account.
the reliance on any content or information displayed on our website.
any direct, consequential, special or punitive loss, damage, costs and expenses.
loss of profit.
loss of business.
loss of reputation.
4.3       Unless we otherwise expressly agree in writing, you agree not to use our website for any commercial or business purposes.

4.4       We will not be liable for any loss or damage caused by a virus, distributed denial of service attack or other technological harmful material that may infect your computer equipment, computer programs, data or other proprietary material due to your use of our website or to your downloading of any content on it, or any website linked to it.

4.5       If you enquire about a property on this Website, you acknowledge and agree that your details will be sent by email directly to the agent, estate agent, landlord, developer marketing the property or properties you are enquiring about. We do not accept any liability for any subsequent communications that you receive directly from that estate agent, landlord or developer and/or any third party.



5. REVISIONS AND ERRATA



The materials appearing on the Website could include technical, typographical, or photographic errors. We do not warrant that any of the materials on its website are accurate, complete, or current. We may make technical changes to the materials contained on the Amtalek.com at any time without notice.



6. AVAILABILITY OF WEBSITE



We strive to ensure that our website and the services are available to you at all times but cannot guarantee that either the Website or the services will operate continuously, without interruptions or be fault free. On occasion, necessary maintenance or upgrade work requires us to make the Website and the services unavailable without notice, but we aim to keep downtime to a minimum. We accept no liability for any interruption or loss of service.



7. SITE TERMS OF USE MODIFICATIONS



We may revise these Terms of Use and any such Terms for the Website at any time without notice. By using this (Website/Mobile app), you are agreeing to be bound by the Terms of Use.



 8. INTELLECTUAL PROPERTY



8.1       Unless otherwise expressly stated, all contents of the website are copyrights, trademarks, controlled or licensed by Amtalek.com, or one of our affiliates or by third parties who have licensed their materials to us and are protected by the applicable laws.

8.2       Amtalek and Users and Clients  together with our suppliers and licensors expressly reserve all intellectual property rights in all text, programs, products, processes, technology, content and other materials, which appear on this Website. Any use of this Website or its contents, including copying or storing it or them in whole or part, other than for your own personal, non-commercial use, is prohibited without our permission. You may not modify, distribute or re-post anything on this Website for any purpose.

8.3       Our names and logos and all related product and service names, design marks and slogans are the trademarks or service marks of us or our licensors. No trademark or service mark license is granted in connection with the materials contained on this Website.

8.4       Access to this Website does not authorize anyone to use any name, logo or mark in any manner whatsoever.



9. GOVERNING LAW



These Terms of Use and your access to the platform is subject to and governed by the laws of the Arab Republic of Egypt. You agree to submit to the exclusive jurisdiction of the Courts of the Arab Republic of Egypt.



 10. CONTACT US



10.1       Amtalek.com subscribers are licensed real estate brokers, developers and hotel apartment providers. Our advertisers are contractually obligated to only list properties that are available for sale or lease with the proper authority from the owner and all other required governing bodies. Properties listed on amtalek.com should be a fair and accurate portrayal of the property itself and the proposed transaction. To report any suspected fraudulent or misleading property postings on our site please send us an email with the details to info@amtalek.com

If you have any queries, complaints or recommendations about these Terms of Use, please contact us at the following address: info@amtalek.com.</string>
    <string name="search_property">Search property</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="add_comment">Add comment</string>
    <string name="location">Location</string>
    <string name="_20_000_egp">20.000 EGP</string>
    <string name="display_video">Display video</string>
    <string name="views_chart">Views chart</string>
    <string name="chart_views">Chart views</string>
    <string name="main_word">Main word</string>
    <string name="min_price">Min price</string>
    <string name="historic_townhouse">Historic townhouse</string>
    <string name="business_district_1_newtown_newtown_west_bengal_india">Business District 1, Newtown, Newtown, West Bengal, India</string>
    <string name="statusl">Status:</string>
    <string name="my_offerl">My offer:</string>
    <string name="property_status">property status</string>
    <string name="beds_number">beds number</string>
    <string name="bathrooms_number">bathrooms number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="brokers">Agencies</string>
    <string name="hot_offer">Hot Offer</string>
    <string name="for_sell">For Sale</string>
    <string name="profile">Profile</string>
    <string name="max_price">Max price</string>
    <string name="social_network">Social Network</string>
</resources>