<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_property"
        android:textColor="@color/amtalek_blue_dark"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/shape_white"
        android:hint="@string/location"
        android:inputType="text"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/textView27"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view4"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/textView27"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/shape_white"
        android:hint="@string/main_word"
        android:inputType="text"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/view4"
        android:importantForAutofill="no" />

    <include
        android:id="@+id/in_currency"
        layout="@layout/layout_default_spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView32"
        app:layout_constraintEnd_toEndOf="@+id/textView29"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <EditText
        android:id="@+id/textView32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_white"
        android:padding="@dimen/_6sdp"
        android:hint="@string/property_status"
        android:inputType="text"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_white"
        android:padding="@dimen/_6sdp"
        android:hint="@string/beds_number"
        android:inputType="number"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/in_currency"
        app:layout_constraintStart_toStartOf="@+id/in_currency"
        app:layout_constraintTop_toBottomOf="@+id/in_currency"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_white"
        android:padding="@dimen/_6sdp"
        android:hint="@string/bathrooms_number"
        android:inputType="number"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView32"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/textView36"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_white"
        android:padding="@dimen/_6sdp"
        android:hint="@string/min_price"
        android:inputType="numberDecimal"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/in_currency"
        app:layout_constraintStart_toStartOf="@+id/in_currency"
        app:layout_constraintTop_toBottomOf="@+id/textView34"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_white"
        android:padding="@dimen/_6sdp"
        android:hint="@string/max_price"
        android:inputType="numberDecimal"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView32"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:background="@drawable/shape_yellow"
        android:text="@string/search"
        android:padding="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />
</androidx.constraintlayout.widget.ConstraintLayout>