<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    android:background="@drawable/shape_gray">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="@dimen/_86sdp"
        android:layout_height="@dimen/_86sdp"
        android:layout_margin="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/pic_property3" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/montserratregular"
        android:text="@string/historic_townhouse"
        android:textColor="@color/amtalek_blue_dark"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toEndOf="@+id/cv_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FDProduct_tv_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:ellipsize="end"
        android:fontFamily="@font/montserratregular"
        android:maxLines="2"
        android:text="@string/business_district_1_newtown_newtown_west_bengal_india"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_image"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/itemCart_tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:fontFamily="@font/montserratregular"
        android:text="@string/statusl"
        android:textColor="@color/amtalek_blue_dark"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/for_sell"
        android:textColor="@color/amtalek_blue_dark"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/itemCart_tv_price" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/montserratregular"
        android:text="@string/my_offerl"
        android:textColor="@color/amtalek_blue_dark"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_image" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/_20_000_egp"
        android:textColor="@color/amtalek_blue_dark"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>