<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet_question"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    android:fitsSystemWindows="true"
    android:layoutDirection="locale"
    android:padding="@dimen/_16sdp">

    <View
        android:id="@+id/view3"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_8sdp"
        android:background="@drawable/shape_gray_layer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/leave_a_comment"
        android:textColor="@color/amtalek_blue_dark"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_gray"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/_6sdp"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_gray"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/_6sdp"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/et1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et1"
        app:layout_constraintTop_toBottomOf="@+id/et1" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_gray"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/_6sdp"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/et1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et1"
        app:layout_constraintTop_toBottomOf="@+id/et2" />

    <EditText
        android:id="@+id/et4"
        android:layout_width="0dp"
        android:layout_height="@dimen/_74sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_gray"
        android:gravity="top"
        android:hint="@string/message"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/_6sdp"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/et1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et1"
        app:layout_constraintTop_toBottomOf="@+id/et3" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:contentDescription="@null"
        android:padding="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView86"
        app:srcCompat="@drawable/ic_close" />

    <Button
        android:id="@+id/DQuestion_btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_orange"
        android:fontFamily="@font/montserratregular"
        android:text="@string/add_comment"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et4"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>